--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ var/
 .installed.cfg
 *.egg
 config.py
+orders.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
